prevent jump of navbartoggle on screens with 320px width

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ ul {
     }
 
     .header-logo {
-        max-width: 250px;
+        max-width: 200px;
     }
 
     .grid {
